fix: Fix scrollbar styles for code block

--- a/styles/base.css
+++ b/styles/base.css
@@ -11,6 +11,8 @@
     scrollbar-gutter: stable;
     /* Fallback for browsers that don't support scrollbar-gutter */
     overflow-y: scroll;
+    /* Set scrollbar style */
+    @apply scrollbar-thin scrollbar-track-transparent;
   }
 
   body {
@@ -25,28 +27,5 @@
   /* Disable transitions during initial theme load to prevent flash */
   .no-transition * {
     transition-property: none !important;
-  }
-
-  /* Scrollbar styles */
-  ::-webkit-scrollbar {
-    height: auto;
-    width: var(--scroll-bar-width);
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background-color: hsla(0, 0%, 69%, 0.4);
-    border-radius: calc(var(--scroll-bar-width) / 2);
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: hsla(0, 0%, 69%, 0.8);
-  }
-
-  ::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
-
-  :root {
-    --scroll-bar-width: 5px;
   }
 }
